# rustory

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml
.github/workflows/: ci.yml  docs-integrity.yml  release-gates.yml
docs/: CHANGE_CONTROL.md  ESCALATION_POLICY.md  EXECUTION_LOOP.md  HANDOFF.md  IMPROVEMENT_LOOP.md  LESSONS_ARCHIVE.md  LESSONS_LOG.md  OPERATING_MODEL.md  README.md  README_OPERATING_POLICY.md  REPO_MANIFEST.yaml  SKILL_OPERATING_GUIDE.md  daemon.md  dev-playbook.md  hook.md  mvp.md  p2p.md  quickstart.md
docs/acceptance/: README.md  docker-macos-linux.md
docs/todo-async-upload-queue/: spec.md
docs/todo-ci/: open-questions.md  spec.md
docs/todo-docs-integrity-fetch-depth-fix/: spec.md
docs/todo-http-retry/: spec.md
scripts/: acceptance_docker_macos_linux.sh  check-branch-hygiene.sh  check-doc-index.sh  check-doc-last-verified.sh  check-doc-links.sh  check-jj-conflicts.sh  check-jj-root-git-commit.sh  check-lessons-log-enforcement.sh  check-lessons-log-range.sh  check-manifest-entrypoints.sh  check-open-questions-schema.sh  check-prod-preflight.sh  check-push-gates.sh  check-readme-policy.sh  check-release-gates.sh  check-script-smoke.sh  check-submodules.sh  check-todo-closure.sh  check-todo-readiness.sh  check.sh  finalize-and-push.sh  jj-git-push-safe.sh  run-manifest-checks.sh  secret_scan.sh  smoke_p2p_local.sh  start-work.sh  todo-workspace.sh
src/: cli.rs  config.rs  core.rs  history_import.rs  hook.rs  http_retry.rs  main.rs  p2p.rs  p2p_codec.rs  search.rs  storage.rs  sync.rs  tracker.rs  transport.rs
(+39 files in other folders)
