[package]
name = "rustory"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
time = { version = "0.3", features = ["serde", "macros"] }
ureq = "2.12"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
